--- a/app.json
+++ b/app.json
@@ -28,6 +28,7 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "description": ""
+    "description": "Averis RN-ASSESSMENT",
+    "githubUrl": "https://github.com/gispatial/averis-rn"
   }
 }
